--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,21 +1,22 @@
-#navbar_logo {
-    position: absolute;
+#navbar-logo {
+    float: left;
     left: 150px;
     width: 150px;
     height: 65px;
     top: 55px;
 }
-#navbar_position{
-    position: absolute;
-    left: 800px;
-    top: 60px;
+#navbar{
+    padding: 50px;
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
 }
 #nav-items {
-    display: flex;
-    justify-content: center;
     align-items: center;
-    list-style: none;
-    font-family: 'Athelas', serif;
+}
+#nav-items li {
+   margin-left: 30px; 
+   font-family: 'Athelas', serif;
 }
 nav ul {
     display: flex;
@@ -35,3 +36,4 @@ nav a {
     color: white;
     font-size: 16px;
 }
+
